# equinox-llama

./: .gitignore  pyproject.toml
llama/: model.py
tests/: test.ipynb  test.py
