[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name = "equinox-llama"
requires-python = ">=3.10,<3.12"
dependencies = [
    "jax==0.4.38",
    "optax==0.2.4",
    "equinox==0.11.11",
]

[project.optional-dependencies]
test = [
    "torch==2.6.0",
    "transformers==4.48.3",
    "accelerate==0.26.0",
    "pytest==8.3.4",
    "numpy==2.2.3"

]

[tool.setuptools.packages.find]
include = ["llama"]